Grammar fixes in the header

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 base_title: Basketball GM - Free online single-player basketball management simulation video game
 ---
-<h1 class="hidden-xs splash-header">Run Your Own Basketball Team - Play Free Online</h1>
+<h1 class="hidden-xs splash-header">Run your own basketball team - Play for free in your browser</h1>
 
 <div class="container">
   <div class="row">
